--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "moment": "^2.26.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.10.0",
     "react-moment": "^0.9.7",
     "react-scripts": "3.4.1",
     "save": "^2.4.0",
