--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "job-board",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Carls13.github.io/jobs-scraper-front",
   "dependencies": {
     "@reach/router": "^1.3.3",
     "axios": "^0.19.2",
     "cra-template": "1.0.3",
+    "gh-pages": "^3.0.0",
     "moment": "^2.26.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -19,7 +21,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
