--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "job-board",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Carls13.github.io/jobs-scraper-front",
+  "homepage": "https://Carls13.github.io/jobs-scraper-front/",
   "dependencies": {
     "@reach/router": "^1.3.3",
     "axios": "^0.19.2",
